engines/ep/src/vbucket.h
@@ -35,6 +35,7 @@
 #include <queue>
 
 class ActiveDurabilityMonitor;
+struct CheckpointSnapshotRange;
 class CheckpointManager;
 class CheckpointConfig;
 class ConflictResolution;
@@ -490,9 +491,8 @@ public:
 
     struct ItemsToFlush {
         std::vector<queued_item> items;
-        std::vector<snapshot_range_t> ranges;
+        std::vector<CheckpointSnapshotRange> ranges;
         bool moreAvailable = false;
-        boost::optional<uint64_t> highCompletedSeqno = {};
         boost::optional<uint64_t> maxDeletedRevSeqno = {};
         CheckpointType checkpointType = CheckpointType::Memory;
     };
